# buoycam-photos

./: .gitignore  pyproject.toml
buoycam_photos/: __init__.py  download_image.py  get_station_images.py  get_station_names.py  get_stations.py
buoycam_photos/output/: stations.txt
tests/: test_buoycam_photos.py
