[tool.poetry]
name = "buoycam-photos"
version = "0.1.0"
description = "A Python module to download buoy photos from the National Data Buoy Center (NOAA)"
authors = ["Gregor Weichbrodt <gregorweichbrodt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastkml = "^0.12"
autopep8 = "^1.6.0"
requests = "^2.26.0"
lxml = "^4.6.4"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
