[tool.poetry]
authors = ["Gregor Weichbrodt <gregorweichbrodt@gmail.com>"]
description = "A Python module to download buoy photos from the National Data Buoy Center (NOAA)"
name = "buoycam-photos"
version = "0.1.4"

[tool.poetry.dependencies]
Pillow = "^8.4.0"
autopep8 = "^1.6.0"
fastkml = "^0.12"
lxml = "^4.6.4"
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
